cabal-version:      2.4
name:               rss-feed
version:            0.1.0.0

synopsis:           A simple RSS feed printer.

description:        rss-feed parses and displays RSS feed updates.
                    It's not supposed to be good, it's for an University class.

bug-reports:        https://github.com/SarahIsWeird/rss-feed/issues

license:            WTFPL
author:             SarahIsWeird
maintainer:         morningcrafter0603@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-settings
    default-language: Haskell2010
    ghc-options:
      -Wall

library
    import: common-settings
    hs-source-dirs:   src
    build-depends:
      base,
      xml,
      aeson,
      bytestring,
      text,
      wreq,
      lens,
      containers,
    exposed-modules:
      RssFeed
        RssFeed.Parse
        RssFeed.Types
        RssFeed.Feed

executable rss-feed
    main-is:          Main.hs
    other-modules:
      OptParse
    build-depends:
      base ^>=4.16.4.0,
      rss-feed,
      wreq,
      lens,
      bytestring,
      text,
      utf8-string,
      optparse-applicative,
      containers,
      aeson,
    ghc-options:
      -O
    hs-source-dirs:   app
    default-language: Haskell2010
